theia 0.1.1:
    low-level graphics
    CAD export info on beams and optics (.fcstd file)
    ghost surfaces
    benches
    command line option '-l' to specify FreeCAD lib location

-----------
theia 0.1.0:
    .tia input file
	.out output file
	lenses, mirrors
	non-sequential tracing
	easy installation thanks to setuptools