@@ -3,3 +3,4 @@
 08.06.17:   0.1.0 alpha
 13.06.17:   0.1.0
 10.07.17:   0.1.1
+24.07.17:   0.1.2
