@@ -10,7 +10,7 @@
 
 \begin{document}
 \begin{center}
-\large \tt{theia} Quick Reference (v. 0.1.1)
+\large \tt{theia} Quick Reference (v. 0.1.2)
 \end{center}
 
 
