@@ -2,7 +2,7 @@
 
 \input{macro}
 
-\title{\texttt{theia} \\ \quad \\A 3D Gaussian Beam Tracer for Gravitational Interferometers\\ \quad \\ \begin{small} Version 0.1.1 \end{small} \\ \quad \\ \textit{User Guide}}
+\title{\texttt{theia} \\ \quad \\A 3D Gaussian Beam Tracer for Gravitational Interferometers\\ \quad \\ \begin{small} Version 0.1.2 \end{small} \\ \quad \\ \textit{User Guide}}
 
 \author{Rapha\"el Duque}
 
