@@ -10,7 +10,7 @@ __author__ = u"Rapha\u00EBl Duque"
 __copyright__ = u"Copyright 2017, Rapha\u00EBl Duque"
 __credits__ = [u"Rapha\u00EBl Duque"]
 __license__ = "GNU GPLv3+"
-__version__ = "0.1.1"
+__version__ = "0.1.2"
 __status__ = "stable"
 __maintainer__ = u"Rapha\u00EBl Duque"
 __email__ = "raphael.duque@polytechnique.edu"
